# qali

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: argparse.rs  db.rs  lib.rs  main.rs  outputils.rs
src/commands/: cmd.rs  command.rs  mod.rs  python.rs  shell.rs  uri.rs
src/db/: interface.rs  mod.rs  tst.rs
src/q/: args.rs  main.rs
src/qali/: args.rs  main.rs
src/suggest/: mod.rs
test/samplefiles/: factorize.py  main.py  uvtst.py
