[package]
name = "qali"
version = "0.2.1"
edition = "2021"
authiors = ["contact@jettchen.me"]
license = "MIT/Apache-2.0"
description = "QALI: Quick ALIasing in the terminal"
readme = "README.md"
homepage = "https://github.com/JettChenT/qali"
repository = "https://github.com/JettChenT/qali"
keywords = ["cli", "productivity", "aliasing"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features=["derive"]}
directories = "4.0"
colored = "2"
glob = "0.3.0"
anyhow="1.0"
serde_json = "1.0"
open = "1"

[[bin]]
name = "q"
path = "src/bin/q/main.rs"

[[bin]]
name = "qali"
path = "src/bin/qali/main.rs"