[package]
name = "qali"
version = "0.4.2"
edition = "2021"
authors = ["contact@jettchen.me"]
license = "MIT/Apache-2.0"
description = "QALI: Quick ALIasing in the terminal"
readme = "README.md"
homepage = "https://github.com/JettChenT/qali"
repository = "https://github.com/JettChenT/qali"
keywords = ["cli", "productivity", "aliasing"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.17", features=["derive"]}
directories = "4.0"
colored = "2"
anyhow="1.0"
open = "1"
regex = "1.6.0"
dialoguer = {version = "0.10.2", features=["fuzzy-select"]}
console = "0.15.1"
tabled = {version = "0.8.0", features=["color"]}

[[bin]]
name = "q"
path = "src/bin/q/main.rs"

[[bin]]
name = "qali"
path = "src/bin/qali/main.rs"