[package]
name = "qali"
version = "0.5.1"
edition = "2021"
authors = ["contact@jettchen.me"]
license = "MIT/Apache-2.0"
description = "QALI: Quick ALIasing in the terminal"
readme = "README.md"
homepage = "https://github.com/JettChenT/qali"
repository = "https://github.com/JettChenT/qali"
keywords = ["cli", "productivity", "aliasing"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
directories = "6.0"
colored = "3"
anyhow = "1.0"
open = "5"
regex = "1.11.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.11"
tabled = { version = "0.18.0" }
which = "7.0.2"
ctrlc = "3.4.5"

[[bin]]
name = "q"
path = "src/bin/q/main.rs"

[[bin]]
name = "qali"
path = "src/bin/qali/main.rs"
